[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/HoverButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/Fyodor-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Materials/HoverButtonPanel.tres" type="Material" id=3]
[ext_resource path="res://UI/Styles/panel.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=4]
size = 26
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="HoverButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/CenterContainer"]
margin_left = 512.0
margin_top = 285.0
margin_right = 512.0
margin_bottom = 315.0
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[connection signal="gui_input" from="Panel" to="." method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
